--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
-<li>João Daniel Silva, Bruno Martins, Joãoo Magalhães, <i>Contrastive Training of a Multimodal Encoder for Medical Visual Question Answering</i>, Intelligent Systems with Applications, 2023 [<a href="">PDF</a>]</li>
+<li>João Daniel Silva, Bruno Martins, João Magalhães, <i>Contrastive Training of a Multimodal Encoder for Medical Visual Question Answering</i>, Intelligent Systems with Applications, 2023 [<a href="">PDF</a>]</li>
 <li>Henrique Lopes Cardoso, Rui Sousa-Silva, Paula Carvalho, and Bruno Martins, <i>Argumentation models and their use in corpus annotation: Practice, prospects, and challenges</i>, Natural Language Engineering, 2023 [<a href="https://doi.org/10.1017/S1351324923000062">PDF</a>]</li>
 <li>Isabel Coutinho, and Bruno Martins, <i>Transformer-based Models for ICD-10 Coding of Death Certificates with Portuguese Text</i>, Journal of Biomedical Informatics, 2022 [<a href="https://doi.org/10.1016/j.jbi.2022.104232">PDF</a>]</li>
 <li>Rita Ramos, and Bruno Martins, <i>Using Neural Encoder-Decoder Models with Continuous Outputs for Remote Sensing Image Captioning</i>, IEEE Access, 2022 [<a href="https://doi.org/10.1109/ACCESS.2022.3151874">PDF</a>]</li>
