--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Project reviewer: </strong>
-						<a href="https://www.nwo.nl/en/researchprogrammes/nwo-talent-programme/projects-vidi">NWO Talent Programme Vidi</a>
+						<a href="https://www.nwo.nl/en/researchprogrammes/nwo-talent-programme/projects-vidi">NWO Talent Programme Vidi</a> |
 						<a href="https://royalsociety.org.nz/what-we-do/funds-and-opportunities/rutherford-discovery-fellowships/">Rutherford Discovery Fellowships</a> |
 						<a href="http://www.snf.ch/">Swiss National Science Foundation</a>
 					</li></ul>
