--- a/index.html
+++ b/index.html
@@ -1085,6 +1085,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://vbn.aau.dk/en/persons/146477">Marina Georgati</a> |
 						<a href="https://www.linkedin.com/in/fernandoblalves/">Fernando Alves</a> |
 
+						<a href="https://joaopfonseca.github.io">João Fonseca</a> |
 						<a href="https://scholar.google.com/citations?user=Vbw_-e8AAAAJ&hl=en">Gil Rocha</a> |
 						<a href="https://mtreviso.github.io">Marcos Treviso</a> |
 						<a href="http://danlou.github.io">Daniel Loureiro</a> |						
