--- a/index.html
+++ b/index.html
@@ -843,6 +843,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.sigapp.org/sac/sac2024/">SAC'24</a> |
 						<a href="https://ecir2024.org">ECIR'24</a> |						
 						<a href="https://aaai.org/aaai-conference/">AAAI'24</a> |						
 						<a href="https://www.wsdm-conference.org/2024/">WSDM'24</a> |						
