--- a/index.html
+++ b/index.html
@@ -779,6 +779,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Manuel Palo, <a href=""><i>Translating sign language into text with large language models</i></a>, IST, 2024 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
 			<li>Afonso Certo, <a href=""><i>End-to-End Robot Task Planning from Voice Commands</i></a>, IST, 2024 (<i>co-supervised with Dr. Carlos Azevedo and Prof. Pedro U. Lima</i>)</li> <!-- ?? valores -->
 			<li>André Alves, <a href=""><i>Assessing the Uncertainty of Large Language Models</i></a>, IST, 2024 (<i>co-supervised with Dr. José Vieira</i>)</li> <!-- ?? valores -->
+			<li>João Nabais, <a href=""><i>Adapting large language models for the domain of clinical trials</i></a>, IST, 2024 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->				
 			
 			</ul>
 		</td>
