--- a/index.html
+++ b/index.html
@@ -847,6 +847,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://aamas2023.soton.ac.uk">AAMAS'24</a> |
 						<a href="http://www.sigapp.org/sac/sac2024/">SAC'24</a> |
 						<a href="https://ecir2024.org">ECIR'24</a> |						
 						<a href="https://aaai.org/aaai-conference/">AAAI'24</a> |						
