--- a/index.html
+++ b/index.html
@@ -848,6 +848,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://text2story24.inesctec.pt">Text2Story'24</a> |
 						<a href="https://lrec-coling-2024.org">LREC-COLING'24</a> |						
 						<a href="https://aamas2023.soton.ac.uk">AAMAS'24</a> |
 						<a href="http://www.sigapp.org/sac/sac2024/">SAC'24</a> |
