--- a/index.html
+++ b/index.html
@@ -1086,14 +1086,16 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
-
+						<a href="http://web.tecnico.ulisboa.pt/soraiafpaulo/">Soraia Paulo</a> |
+						<a href="https://www.cienciavitae.pt/261E-CB39-416C">John Mendonça</a> |
 						<a href="https://web.ist.utl.pt/maria.casimiro/">Maria Casimiro</a> |						
 						<a href="https://nunonmg.github.io/">Nuno Guerreiro</a> |
 						<a href="https://orcid.org/0000-0002-0362-6100">Herbert Pinto</a> |
 						<a href="https://www.linkedin.com/in/afonso-salgado-sousa/?originalSubdomain=pt">Afonso Sousa</a> |
 						<a href="https://vbn.aau.dk/en/persons/146477">Marina Georgati</a> |
 						<a href="https://www.linkedin.com/in/fernandoblalves/">Fernando Alves</a> |
-
+						
+						<a href="https://scholar.google.com/citations?user=dEdhfOQAAAAJ">Daniel Garcia-Gonzalez</a> |
 						<a href="https://joaopfonseca.github.io">João Fonseca</a> |
 						<a href="https://scholar.google.com/citations?user=Vbw_-e8AAAAJ&hl=en">Gil Rocha</a> |
 						<a href="https://mtreviso.github.io">Marcos Treviso</a> |
@@ -1131,6 +1133,12 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="MEIC-ANDRE">Pedro Ramos</a> |
+						<a href="MEEC-ANDRE">João Fonseca</a> |
+						<a href="MEIC-DAVIDMATOS">Pedro Galhardo</a> |
+						<a href="MAAT-ARLINDO">José Cunha</a> |
+						<a href="MECD-MARIO">Ana Sofia Guerreiro</a> |
+
 						<a href="MEEC-ARLINDO">Lourenço Tourais</a> |
 						<a href="MECD-MANUELLOPESS">Rodrigo Silva</a> |
 						<a href="MEEC-DAVIDMATOS">Ricardo Espadinha</a> |
