--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Luís Borges, Jamie Callan, and Bruno Martins, <i>Team CMU-LTI at TREC 2023 Tip-of-the-Tongue Track</i>, Proceedings of the Text Retrieval Conference, 2023</li>				
 <li>Miguel Gonçalves, Bruno Martins, and Jacinto Estima, <i>A Detailed Analysis on the Use of General-purpose Vision Transformers for Remote Sensing Image Segmentation</i>, Proceedings of the International ACM SIGSPATIAL Workshop on AI for Geographic Knowledge Discovery, 2023 [<a href="">PDF</a>]</li>				
 <li>Helder Dias, Artur Guimarães, Bruno Martins, and Mathieu Roche, <i>Unsupervised Key-Phrase Extraction from Long Texts with Multilingual Sentence Transformers</i>, Proceedings of the International Conference on Discovery Science, 2023 [<a href="">PDF</a>]</li>
 <li>Isabel Coutinho, and Bruno Martins, <i>Exploring Label Correlations for Quantification of ICD Codes</i>, Proceedings of the International Conference on Discovery Science, 2023 [<a href="">PDF</a>]</li>
@@ -434,7 +435,7 @@ involved in several research projects related to geospatial aspects in informati
 <li>Tiago Gonçalves, Ana Paula Afonso, and Bruno Martins, <i>Visual Analysis of Mobility Data</i>, PhD Forum of the International Conference on Mobile Data Management, 2013 [<a href="http://dx.doi.org/10.1109/MDM.2013.56">PDF</a>] </li>
 <li>Wesley Mathew, and Bruno Martins, <i>A Comparison of First- and Second-Order HMMs in the Task of Predicting the Next Locations of Mobile Individuals</i>, Proceedings of the ACM ´ International Workshop on Mobile Geographic Information Systems, 2012 [<a href="http://dl.acm.org/citation.cfm?id=2442823">PDF</a>] </li>
 <li>Wesley Mathew, Ruben Raposo, and Bruno Martins, <i>Predicting Future Locations with Hidden Markov Models</i>, Proceedings of the ACM Conference on Ubiquitous Computing, 2012 [<a href="http://dl.acm.org/citation.cfm?id=2370421">PDF</a>] </li>
-<li>Ivo Anastácio, Bruno Martins, and Pável Calado. The DMIR_Tagus Team at TAC-KBP 2012</i>, Proceedings of the Text Analysis Conference, 2012</li>
+<li>Ivo Anastácio, Bruno Martins, and Pável Calado, <i>The DMIR_Tagus Team at TAC-KBP 2012</i>, Proceedings of the Text Analysis Conference, 2012</li>
 <li>Bruno Martins, Helena Galhardas, and Nelson Gonçalves, <i>Um Método de Classificação Automática Para a Detecção de Duplicados em Gazetteers</i>, Proceedings of the Ibero-American Workshop on Data Quality, 2012</li>
 <li>Duarte Dias, Ivo Anastácio, and Bruno Martins, <i>A Language Modeling Approach for Georeferencing Textual Documents</i>, Proceedings of the Spanish Conference in Information Retrieval, 2012 [<a href="http://users.dsic.upv.es/grupos/nle/ceri/papers/ceri2012_dias.pdf">PDF</a>] </li>
 <li>Bruno Martins, Ivo Anastácio, and Luis Santos, <i>Combining Learning Methods to Resolve Geographical and Temporal References in Text</i>, Proceedings of the ACM Conference on Hypertext and Social Media, 2012 [<a href="papers/paper.pdf">PDF</a>] </li>
