--- a/index.html
+++ b/index.html
@@ -109,17 +109,22 @@ involved in several research projects related to geospatial aspects in informati
 				</tr>
 				<tr>
 					<td>
-						<strong>ORCID: </strong>0000-0002-3856-2936
+						<strong>ORCID: </strong><a href="https://orcid.org/0000-0002-3856-2936">0000-0002-3856-2936</a>
 					</td>
 				</tr>
 				<tr>
 					<td>
-						<strong>ResearcherID: </strong>J-9735-2015
+						<strong>Ciência Vitae: </strong><a href="https://cienciavitae.pt/portal/en/A914-BDD4-17B1">A914-BDD4-17B1</a>
 					</td>
 				</tr>
 				<tr>
 					<td>
-						<strong>Scopus Author ID: </strong>8546762500
+						<strong>ResearcherID: </strong><a href="https://www.webofscience.com/wos/author/record/J-9735-2015">J-9735-2015</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<strong>Scopus Author ID: </strong><a href="">8546762500</a>
 					</td>
 				</tr>
 				<tr>
