--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
-<li>Luís Borges, Jamie Callan, and Bruno Martins, <i>Team CMU-LTI at TREC 2023 Tip-of-the-Tongue Track</i>, Proceedings of the Text Retrieval Conference, 2023</li>				
+<li>Luís Borges, Jamie Callan, and Bruno Martins, <i>Team CMU-LTI at TREC 2023 Tip-of-the-Tongue Track</i>, Proceedings of the Text Retrieval Conference, 2023 [<a href="">PDF</a>]</li>				
 <li>Miguel Gonçalves, Bruno Martins, and Jacinto Estima, <i>A Detailed Analysis on the Use of General-purpose Vision Transformers for Remote Sensing Image Segmentation</i>, Proceedings of the International ACM SIGSPATIAL Workshop on AI for Geographic Knowledge Discovery, 2023 [<a href="">PDF</a>]</li>				
 <li>Helder Dias, Artur Guimarães, Bruno Martins, and Mathieu Roche, <i>Unsupervised Key-Phrase Extraction from Long Texts with Multilingual Sentence Transformers</i>, Proceedings of the International Conference on Discovery Science, 2023 [<a href="">PDF</a>]</li>
 <li>Isabel Coutinho, and Bruno Martins, <i>Exploring Label Correlations for Quantification of ICD Codes</i>, Proceedings of the International Conference on Discovery Science, 2023 [<a href="">PDF</a>]</li>
