--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ involved in several research projects related to geospatial aspects in informati
 				</tr>
 				<tr>
 					<td>
-						<strong>Scopus Author ID: </strong><a href="">8546762500</a>
+						<strong>Scopus Author ID: </strong><a href="https://www.scopus.com/authid/detail.uri?authorId=8546762500">8546762500</a>
 					</td>
 				</tr>
 				<tr>
