--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@ involved in several research projects related to geospatial aspects in informati
 				<tr>
 					<td>
 					<ul><li>
-						<strong>Member of programe committees and reviewer: </strong>
+						<strong>Member of programe committees and reviewer: </strong>						
 						<a href="https://text2story24.inesctec.pt">Text2Story'24</a> |
 						<a href="https://lrec-coling-2024.org">LREC-COLING'24</a> |						
 						<a href="https://aamas2023.soton.ac.uk">AAMAS'24</a> |
@@ -862,6 +862,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://aaai.org/aaai-conference/">AAAI'24</a> |						
 						<a href="https://www.wsdm-conference.org/2024/">WSDM'24</a> |						
 						<a href="https://propor2024.citius.gal">PROPOR'24</a> |
+						<a href="https://simbig.org/SIMBig2023/">SIMBig'23</a> |						
 						<a href="https://ictai.computer.org/2023/">ICTAI'23</a> |						
 						<a href="https://conll.org">CoNLL'23</a> |	
 						<a href="https://2023.emnlp.org">EMNLP'23</a> |						
