--- a/index.html
+++ b/index.html
@@ -766,11 +766,11 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Catarina Gatinho, <a href=""><i>Geospatial Language Understanding</i></a>, IST, 2023</li> <!-- 15 valores -->
 			<li>João Novo, <a href=""><i>Object Detection Under Low-Light and Adverse Weather Conditions</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 17 valores -->
 
+			<li>Diogo Ferrão, <a href=""><i>Urban Acoustic Scene Classification</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 15 valores -->
 			<li>Gonçalo Gomes, <a href=""><i>Refining Multi-Label Clinical Text Classifiers for Text Quantification</i></a>, IST, 2023</li> <!-- 19 valores -->			
 			<li>João Pedras, <a href=""><i>Remote Sensing Visual Question Answering</i></a>, IST, 2023</li> <!-- 17 valores -->
 			<li>Diogo Ferreira, <a href=""><i>Time Series Forecasting for Disease/Mortality Data</i></a>, IST, 2023</li> <!-- 17 valores -->
 			<li>Helder Dias, <a href=""><i>Multi-Document Key-Phrase Extraction with Transformer Models and Geospatial Association Measures</i></a>, IST, 2023</li> <!-- 17 valores -->
-			<li>Diogo Ferrão, <a href=""><i>Urban Acoustic Scene Classification</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 14 valores -->
 			<li>Mariana Chinopa, <a href=""><i>Geographically-Aware Image Captioning</i></a>, IST, 2023</li> <!-- 12 valores -->
 				
 			<li>Diogo Silva, <a href=""><i>Dialogue Summarization with Retrieval-Augmented Transformers</i></a>, IST, 2023 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
@@ -806,7 +806,11 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
-						<a href="http://lxmls.it.pt/">LxMLS'23</a> |
+						<a href="http://lxmls.it.pt/">LxMLS'24</a> |
+						<a href="https://sigspatial2023.sigspatial.org">SIGSPATIAL'23</a>
+						<a href="https://ludovicmoncla.github.io/sigspatial-geohumanities-2023/">SIGSPATIAL GeoHumanities'23</a> |
+						<a href="https://geoai.ornl.gov/acmsigspatial-geoai/2023-main/">GeoAI'23</a> |
+						<a href="http://lxmls.it.pt/2023/">LxMLS'23</a> |
 						<a href="http://essir2022.org">ESSIR'22</a> |
 						<a href="http://lxmls.it.pt/2022/">LxMLS'22</a> |
 						<a href="https://ludovicmoncla.github.io/sigspatial-geohumanities-2022/">SIGSPATIAL GeoHumanities'22</a> |
@@ -868,7 +872,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://2023.emnlp.org">EMNLP'23</a> |						
 						<a href="http://www.ijcnlp-aacl2023.org">AACL'23</a> |
 						<a href="https://icmi.acm.org/2023/">ICMI'23</a> |
-						<a href="https://sigspatial2023.sigspatial.org">SIGSPATIAL'23</a> |
+						<a href="https://sigspatial2023.sigspatial.org">SIGSPATIAL'23</a> (Recognized Reviewer Award)|
 						<a href="https://ach2023.ach.org/">ACH'23</a> |						
 						<a href="https://2023.aclweb.org">ACL'23</a> |
 						<a href="https://giscience2023.github.io">GIScience'23</a> |
