--- a/index.html
+++ b/index.html
@@ -1144,6 +1144,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="NOVA-JOAO">João Bordalo</a> | 
+						<a href="MEEC-MARIO">Tiago Pinto</a> |
 						<a href="MEIC-ANDRE">Pedro Ramos</a> |
 						<a href="MEEC-ANDRE">João Fonseca</a> |
 						<a href="MEIC-DAVIDMATOS">Pedro Galhardo</a> |
