--- a/index.html
+++ b/index.html
@@ -616,9 +616,9 @@ involved in several research projects related to geospatial aspects in informati
 			<li>João Coelho, <i>Neural Information Retrieval for Long Documents</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Jamie Callan and Prof. João Magalhães</i>)</li>
 			<li>João Silva, <i>Vision and Language Models for Remote Sensing Data</i>, IST (<i>ongoing co-supervision with Prof. Devis Tuia and Prof. João Magalhães</i>)</li>
 			<li>Artur Guimarães, <i>Information Retrieval over Clinical Documents</i>, IST (<i>ongoing co-supervision with Prof. João Magalhães</i>)</li>				
-			<!-- <li>Gonçalo Gomes, <i>Quality Assessment for Vision-and-Language Encoder Models</i>, IST (<i>ongoing co-supervision with ??</i>)</li> -->
+			<li>Gonçalo Gomes, <i>Quality Assessment for Vision-and-Language Encoder Models</i>, IST (<i>ongoing co-supervision with Chrysoula Zerva</i>)</li>
 			<!-- <li>Tahsir Munna, <i>Efficient Training of Vision-and-Language Encoder Models</i>, IST (<i>ongoing co-supervision with ??</i>)</li> -->			
-			<!-- <li>Piotr Gramacki, <i>Geospatial Language Models</i>, IST (<i>ongoing co-supervision with Prof. Piotr Szymański</i>)</li> -->
+			<li>Piotr Gramacki, <i>Geospatial Language Models</i>, IST (<i>ongoing co-supervision with Prof. Piotr Szymański</i>)</li>
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
