--- a/index.html
+++ b/index.html
@@ -857,7 +857,8 @@ involved in several research projects related to geospatial aspects in informati
 				<tr>
 					<td>
 					<ul><li>
-						<strong>Member of programe committees and reviewer: </strong>						
+						<strong>Member of programe committees and reviewer: </strong>	
+						<a href="https://sigir.org/sigir2024/">SIGIR'24</a> |
 						<a href="https://text2story24.inesctec.pt">Text2Story'24</a> |
 						<a href="https://lrec-coling-2024.org">LREC-COLING'24</a> |						
 						<a href="https://aamas2023.soton.ac.uk">AAMAS'24</a> |
