--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,8 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://www.linkedin.com/in/afonso-salgado-sousa/?originalSubdomain=pt">Afonso Sousa</a> |
 						<a href="https://vbn.aau.dk/en/persons/146477">Marina Georgati</a> |
 						<a href="https://www.linkedin.com/in/fernandoblalves/">Fernando Alves</a> |
-						
+
+						<a href="https://www.linkedin.com/in/syed-mehtab-alam-b4564a30/">Mehtab Alam Syed</a> |
 						<a href="https://scholar.google.com/citations?user=dEdhfOQAAAAJ">Daniel Garcia-Gonzalez</a> |
 						<a href="https://joaopfonseca.github.io">João Fonseca</a> |
 						<a href="https://scholar.google.com/citations?user=Vbw_-e8AAAAJ&hl=en">Gil Rocha</a> |
