--- a/index.html
+++ b/index.html
@@ -858,7 +858,9 @@ involved in several research projects related to geospatial aspects in informati
 				<tr>
 					<td>
 					<ul><li>
-						<strong>Member of programe committees and reviewer: </strong>	
+						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://sdss2024.spatial-data-science.net">SDSS'24</a> |						
+						<a href="https://agile-online.org/conference-2024">AGILE'24</a> |
 						<a href="https://sigir.org/sigir2024/">SIGIR'24</a> |
 						<a href="https://text2story24.inesctec.pt">Text2Story'24</a> |
 						<a href="https://lrec-coling-2024.org">LREC-COLING'24</a> |						
