--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
+<li>Fabio Goularte, Bruno Martins, Paula Carvalho, Miguel Won, <i>SentPT: A customized solution for multi-genre sentiment analysis of Portuguese-language texts</i>, Expert Systems with Applications, 2024 [<a href="">PDF</a>] </li>				
 <li>Marina Georgati, João Monteiro, Bruno Martins, Henning Sten Hansen, and Carsten Keßler, <i>Modelling Population Distribution: A Visual and Quantitative Analysis of Gradient Boosting and Deep Learning Models for Multi-Output Spatial Disaggregation</i>, Transactions in GIS, vol. 28, no. 2, 2024 [<a href="https://doi.org/10.1111/tgis.13130">PDF</a>] </li>				
 <li>João Daniel Silva, Bruno Martins, João Magalhães, <i>Contrastive Training of a Multimodal Encoder for Medical Visual Question Answering</i>, Intelligent Systems with Applications, 2023 [<a href="https://doi.org/10.1016/j.iswa.2023.200221">PDF</a>]</li>
 <li>Henrique Lopes Cardoso, Rui Sousa-Silva, Paula Carvalho, and Bruno Martins, <i>Argumentation models and their use in corpus annotation: Practice, prospects, and challenges</i>, Natural Language Engineering, 2023 [<a href="https://doi.org/10.1017/S1351324923000062">PDF</a>]</li>
@@ -604,6 +605,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Postdoctoral Researchers</h3>
 			<ul>
 			<li>Miguel Won, <i>Analysing Political Discourse Through Text Mining Methods</i>, INESC-ID (<i>co-supervised with Prof. Pedro Magalhães</i>)</li>
+			<!-- <li>Gil Rocha, <i></i>, INESC-ID </li> -->
 			</ul>
 			<h3>PhD Students</h3>
 			<ul>
@@ -612,13 +614,13 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Luís Borges, <i>Neural Information Retrieval</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Jamie Callan</i>)</li>
 			<li>Rita Ramos, <i>Deep Learning Methods Bridging Language and Vision</i>, IST/KU.DK (<i>ongoing co-supervision with Prof. Desmond Elliott</i>)</li>
 			<!-- <li>André Neves, <i>Deep Learning for Remote Sensing Applications</i>, FCT-UNL (<i>ongoing co-supervision with Prof. João Moura Pires and Prof. Carlos Damásio</i>)</li> -->			
-			<li>Gonçalo Raposo, <i>Conversational Search</i>, IST (<i>ongoing co-supervision with Prof. Luísa Coheur</i>)</li>
+			<!-- <li>Gonçalo Raposo, <i>Conversational Search</i>, IST (<i>ongoing co-supervision with Prof. Luísa Coheur</i>)</li> -->
 			<li>Isabel Coutinho, <i>Clinical Text Mining</i>, IST (<i>ongoing</i>)</li>
 			<li>João Coelho, <i>Neural Information Retrieval for Long Documents</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Jamie Callan and Prof. João Magalhães</i>)</li>
 			<li>João Silva, <i>Vision and Language Models for Remote Sensing Data</i>, IST (<i>ongoing co-supervision with Prof. Devis Tuia and Prof. João Magalhães</i>)</li>
 			<li>Artur Guimarães, <i>Information Retrieval over Clinical Documents</i>, IST (<i>ongoing co-supervision with Prof. João Magalhães</i>)</li>				
 			<li>Gonçalo Gomes, <i>Quality Assessment for Vision-and-Language Encoder Models</i>, IST (<i>ongoing co-supervision with Chrysoula Zerva</i>)</li>
-			<!-- <li>Tahsir Munna, <i>Efficient Training of Vision-and-Language Encoder Models</i>, IST (<i>ongoing co-supervision with ??</i>)</li> -->			
+			<li>Helder Dias, <i>Vision and language LLMs for document form understanding</i>, IST (<i>ongoing co-supervision with Arlindo Oliveira</i>)</li>			
 			<li>Piotr Gramacki, <i>Geospatial Language Models</i>, IST (<i>ongoing co-supervision with Prof. Piotr Szymański</i>)</li>
 			</ul>
 			<h3>MSc Students</h3>
