--- a/index.html
+++ b/index.html
@@ -861,6 +861,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://sites.google.com/view/trac2024/home">TRAC'24</a> |
 						<a href="http://sdss2024.spatial-data-science.net">SDSS'24</a> |						
 						<a href="https://agile-online.org/conference-2024">AGILE'24</a> |
 						<a href="https://sigir.org/sigir2024/">SIGIR'24</a> |
