--- a/index.html
+++ b/index.html
@@ -619,8 +619,8 @@ involved in several research projects related to geospatial aspects in informati
 			<li>João Coelho, <i>Neural Information Retrieval for Long Documents</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Jamie Callan and Prof. João Magalhães</i>)</li>
 			<li>João Silva, <i>Vision and Language Models for Remote Sensing Data</i>, IST (<i>ongoing co-supervision with Prof. Devis Tuia and Prof. João Magalhães</i>)</li>
 			<li>Artur Guimarães, <i>Information Retrieval over Clinical Documents</i>, IST (<i>ongoing co-supervision with Prof. João Magalhães</i>)</li>				
-			<li>Gonçalo Gomes, <i>Quality Assessment for Vision-and-Language Encoder Models</i>, IST (<i>ongoing co-supervision with Chrysoula Zerva</i>)</li>
-			<li>Helder Dias, <i>Vision and language LLMs for document form understanding</i>, IST (<i>ongoing co-supervision with Arlindo Oliveira</i>)</li>			
+			<li>Gonçalo Gomes, <i>Quality Assessment for Vision-and-Language Encoder Models</i>, IST (<i>ongoing co-supervision with Prof. Chrysoula Zerva</i>)</li>
+			<li>Helder Dias, <i>Vision and language LLMs for document form understanding</i>, IST (<i>ongoing co-supervision with Prof. Arlindo Oliveira</i>)</li>			
 			<li>Piotr Gramacki, <i>Geospatial Language Models</i>, IST (<i>ongoing co-supervision with Prof. Piotr Szymański</i>)</li>
 			</ul>
 			<h3>MSc Students</h3>
@@ -729,8 +729,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Isabel Coutinho, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/846778572212790"><i>Classificação de texto clínico para auxiliar tarefas de codificação</i></a>, IST, 2020 (<i>co-supervised with Dr. João Leal</i>)</li> <!-- 19 valores -->
 			<li>Miguel Froes, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/846778572212844"><i>Fenotipagem na Multimorbilidade</i></a>, IST, 2020 (<i>co-supervised with Prof. Mário Silva and Dr. Bernardo Neves</i>)</li> <!-- 18 valores -->
 			<li>Luís Pereira, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/1128253548922233"><i>Attention Augmented Convolutional Neural Networks for the Classification of Medical Images</i></a>, IST, 2020</li> <!-- 16 valores -->
-			<li>Olavo Bacelar, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mma/dissertacao/1409728525633135"><i>Deep Energy Networks for Data Completion</i></a>, IST, 2021 (<i>co-supervised with Prof. Conceição Amado and Prof. André Martins</i>)</li> <!-- 18 valores -->				
-
+			<li>Olavo Bacelar, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mma/dissertacao/1409728525633135"><i>Deep Energy Networks for Data Completion</i></a>, IST, 2021 (<i>co-supervised with Prof. Conceição Amado and Prof. André Martins</i>)</li> <!-- 18 valores -->
 			<li>Rita Conde, <a href=""><i>Predição de eventos em comércio online e sua interação com pesquisas</i></a>, IST, 2021 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- 16 valores -->
 			<li>André Godinho, <a href=""><i>Neural Approaches for Conversational Question Answering</i></a>, IST, 2021 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- 19 valores -->
 			<li>Diogo Viegas, <a href=""><i>Document Geocoding and Toponym Resolution with Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Maguelonne Teisseire</i>)</li> <!-- 18 valores -->
@@ -749,7 +748,6 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Artur Guimarães, <a href=""><i>Key-phrase Extraction Combining Graph-Based Methods and Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Mathieu Roche</i>)</li> <!-- 18 valores -->
 			<li>Filipe Martins, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 12 valores -->
 			<li>Bernardo Moreira, <a href=""><i>Neural Retrieval Models for Argument Retrieval</i></a>, FEUP, 2022 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- 17 valores -->
-			
 			<li>Pedro Marques, <a href=""><i>Recommendation of Fitness Venues Using Graph Neural Networks</i></a>, IST, 2022 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 18 valores -->				
 			<li>André Leite, <a href=""><i>Neural Models for Generating Clinically Accurate Chest X-Ray Reports</i></a>, IST, 2022 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 16 valores -->			
 			<li>Nichal Narotamo, <a href=""><i>Conversational Question Re-Writing</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- 18 valores -->
@@ -767,8 +765,8 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Miguel Gonçalves, <a href=""><i>Transformer Models for Remote Sensing Image Segmentation</i></a>, IST, 2023 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 19 valores -->
 			<li>Francisco Guedes, <a href=""><i>Visual Question Answering with Remote Sensing Imagery</i></a>, IST, 2023 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 18 valores -->
 			<li>Catarina Gatinho, <a href=""><i>Geospatial Language Understanding</i></a>, IST, 2023</li> <!-- 15 valores -->
+				
 			<li>João Novo, <a href=""><i>Object Detection Under Low-Light and Adverse Weather Conditions</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 17 valores -->
-
 			<li>Diogo Ferrão, <a href=""><i>Urban Acoustic Scene Classification</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 15 valores -->
 			<li>Gonçalo Gomes, <a href=""><i>Refining Multi-Label Clinical Text Classifiers for Text Quantification</i></a>, IST, 2023</li> <!-- 19 valores -->
 			<li>João Pedras, <a href=""><i>Remote Sensing Visual Question Answering</i></a>, IST, 2023</li> <!-- 18 valores -->
@@ -776,24 +774,27 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Helder Dias, <a href=""><i>Multi-Document Key-Phrase Extraction with Transformer Models and Geospatial Association Measures</i></a>, IST, 2023</li> <!-- 19 valores -->
 			<li>Mariana Chinopa, <a href=""><i>Geographically-Aware Image Captioning</i></a>, IST, 2023</li> <!-- 15 valores -->
 
-			<li>Diogo Silva, <a href=""><i>Dialogue Summarization with Retrieval-Augmented Transformers</i></a>, IST, 2023 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
+			<li>Diogo Silva, <a href=""><i>Dialogue Summarization with Retrieval-Augmented Transformers</i></a>, IST, 2024 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
 				
-			<li>Eduardo Ladeiras, <a href=""><i>Visually Grounded Speech Recognition </i></a>, IST, 2023</li> <!-- ?? valores -->							
-			<li>Manuel Miranda, <a href=""><i>Finding Bounding Boxes for Visual Answers to Natural Language Questions</i></a>, IST, 2023</li> <!-- ?? valores -->			
-			<li>Miguel Carvalho, <a href=""><i>Conversational Question Answering on Visual Contents</i></a>, IST, 2023 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->			
-			<li>Gonçalo Marques, <a href=""><i>Efficient Neural Information Retrieval Methods</i></a>, IST, 2023 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->
-			<li>Vasco Rocha, <a href=""><i>Improving Differentiable Neural Architecture Search</i></a>, IST, 2023 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- ?? valores -->
-			<li>João Silva, <a href=""><i>Generating Multilingual Captions for Images and Videos With Transformer Neural Models</i></a>, IST, 2023 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
+			<li>Eduardo Ladeiras, <a href=""><i>Visually Grounded Speech Recognition </i></a>, IST, 2024</li> <!-- ?? valores -->							
+			<li>Manuel Miranda, <a href=""><i>Finding Bounding Boxes for Visual Answers to Natural Language Questions</i></a>, IST, 2024</li> <!-- ?? valores -->			
+			<li>Miguel Carvalho, <a href=""><i>Conversational Question Answering on Visual Contents</i></a>, IST, 2024 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->			
+			<li>Gonçalo Marques, <a href=""><i>Efficient Neural Information Retrieval Methods</i></a>, IST, 2024 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->
+			<li>Vasco Rocha, <a href=""><i>Improving Differentiable Neural Architecture Search</i></a>, IST, 2024 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- ?? valores -->
+			<li>João Silva, <a href=""><i>Generating Multilingual Captions for Images and Videos With Transformer Neural Models</i></a>, IST, 2024 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
 
 			<li>Catarina Valério, <a href=""><i>Using Large Language Models to Summarize Patient-Physician Dialogues into Medical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->
 			<li>Inês Mota, <a href=""><i>Using Large Language Models to Compose Discharge Summaries from Clinical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->
 			<li>Leonor Barreiros, <a href=""><i>Semi-Supervised Medical Entity Linking</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->			
 			<li>Diogo Branco, <a href=""><i>Adapting large language models for the domain of clinical trials</i></a>, IST, 2024 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			<li>Manuel Palo, <a href=""><i>Translating sign language into text with large language models</i></a>, IST, 2024 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
-			<li>Afonso Certo, <a href=""><i>End-to-End Robot Task Planning from Voice Commands</i></a>, IST, 2024 (<i>co-supervised with Dr. Carlos Azevedo and Prof. Pedro U. Lima</i>)</li> <!-- ?? valores -->
 			<li>André Alves, <a href=""><i>Assessing the Uncertainty of Large Language Models</i></a>, IST, 2024 (<i>co-supervised with Dr. José Vieira</i>)</li> <!-- ?? valores -->
 			<li>João Nabais, <a href=""><i>Adapting large language models for the domain of clinical trials</i></a>, IST, 2024 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
-			<li>Guilherme Lopes, <a href=""><i>Efficient training of vision and language encoder models</i></a>, IST, 2024 (<i>co-supervised with Prof. Conceição Amado</i>)</li> <!-- ?? valores -->				
+			<li>Guilherme Lopes, <a href=""><i>Efficient training of vision and language encoder models</i></a>, IST, 2024 (<i>co-supervised with Prof. Conceição Amado</i>)</li> <!-- ?? valores -->
+
+			<li>Afonso Certo, <a href=""><i>End-to-End Robot Task Planning from Voice Commands</i></a>, IST, 2024 (<i>co-supervised with Dr. Carlos Azevedo and Prof. Pedro U. Lima</i>)</li> <!-- ?? valores -->				
+			<li>Tiago Miranda, <a href=""><i>Using embeddings to infer diagnostics from medical prescriptions</i></a>, IST, 2024 (<i>co-supervised with Dra. Lilia Perfeito</i>)</li> <!-- ?? valores -->
+			<li>Nuno Machado, <a href=""><i>Optimizing Prompts for Large Language Models Using Evolutionary Algorithms</i></a>, IST, 2024 (<i>co-supervised with Prof. Joao Paulo Carvalho</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
