--- a/index.html
+++ b/index.html
@@ -863,10 +863,14 @@ involved in several research projects related to geospatial aspects in informati
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
 						<a href="https://sites.google.com/view/trac2024/home">TRAC'24</a> |
+						<a href="https://2024.aclweb.org">ACL'24</a> |
 						<a href="http://sdss2024.spatial-data-science.net">SDSS'24</a> |						
 						<a href="https://agile-online.org/conference-2024">AGILE'24</a> |
 						<a href="https://sigir.org/sigir2024/">SIGIR'24</a> |
 						<a href="https://text2story24.inesctec.pt">Text2Story'24</a> |
+						<a href="https://2024.naacl.org">NAACL'24</a> |	
+						<a href="https://2024.eacl.org">EACL'24</a> |							
+						<a href="https://dh2024.adho.org">DH'23</a> |
 						<a href="https://lrec-coling-2024.org">LREC-COLING'24</a> |						
 						<a href="https://aamas2023.soton.ac.uk">AAMAS'24</a> |
 						<a href="http://www.sigapp.org/sac/sac2024/">SAC'24</a> |
@@ -895,7 +899,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://text2story23.inesctec.pt">Text2Story'23</a> (Recognized Reviewer Award) |
 						<a href="http://www.sigapp.org/sac/sac2023/">SAC'23</a> |
 						<a href="https://dh2023.adho.org">DH'23</a> |
-						<a href="https://2023.eacl.org">EACL'23</a> |	
+						<a href="https://2023.eacl.org">EACL'23</a> |
 						<a href="https://aaai.org/Conferences/AAAI-23/">AAAI'23</a> |
 						<a href="https://ecir2023.org">ECIR'23</a> |
 						<a href="https://www.wsdm-conference.org/2023/">WSDM'23</a> |
