--- a/index.html
+++ b/index.html
@@ -369,7 +369,8 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
-<li>Luís Borges, Jamie Callan, and Bruno Martins, <i>Team CMU-LTI at TREC 2023 Tip-of-the-Tongue Track</i>, Proceedings of the Text Retrieval Conference, 2023 [<a href="">PDF</a>]</li>				
+<li>Gonçalo Gomes, Isabel Coutinho, and Bruno Martins, <i>Accurate and Well-Calibrated ICD Coding Through Attention Over Diverse Label Embeddings</i>, Proceedings of the Conference of the European Chapter of the Association for Computational Linguistics, 2024 [<a href="">PDF</a>]</li>
+<li>Luís Borges, Jamie Callan, and Bruno Martins, <i>Team CMU-LTI at TREC 2023 Tip-of-the-Tongue Track</i>, Proceedings of the Text Retrieval Conference, 2023 [<a href="">PDF</a>]</li>
 <li>Miguel Gonçalves, Bruno Martins, and Jacinto Estima, <i>A Detailed Analysis on the Use of General-purpose Vision Transformers for Remote Sensing Image Segmentation</i>, Proceedings of the International ACM SIGSPATIAL Workshop on AI for Geographic Knowledge Discovery, 2023 [<a href="https://doi.org/10.1145/3615886.3627751">PDF</a>]</li>				
 <li>Helder Dias, Artur Guimarães, Bruno Martins, and Mathieu Roche, <i>Unsupervised Key-Phrase Extraction from Long Texts with Multilingual Sentence Transformers</i>, Proceedings of the International Conference on Discovery Science, 2023 [<a href="https://doi.org/10.1007/978-3-031-45275-8_10">PDF</a>]</li>
 <li>Isabel Coutinho, and Bruno Martins, <i>Exploring Label Correlations for Quantification of ICD Codes</i>, Proceedings of the International Conference on Discovery Science, 2023 [<a href="https://doi.org/10.1007/978-3-031-45275-8_41">PDF</a>]</li>
