--- a/index.html
+++ b/index.html
@@ -863,6 +863,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://sites.google.com/view/socialnlp2024/">SocialNLP'24</a> |						
 						<a href="http://ds2024.isti.cnr.it/index.html">DS'24</a> |
 						<a href="https://ecai2024.eu/">ECAI'24</a> |
 						<a href="https://sites.google.com/view/trac2024/home">TRAC'24</a> |
