--- a/index.html
+++ b/index.html
@@ -334,8 +334,9 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
-<li>Fabio Goularte, Bruno Martins, Paula Carvalho, Miguel Won, <i>SentPT: A customized solution for multi-genre sentiment analysis of Portuguese-language texts</i>, Expert Systems with Applications, 2024 [<a href="">PDF</a>] </li>				
-<li>Marina Georgati, João Monteiro, Bruno Martins, Henning Sten Hansen, and Carsten Keßler, <i>Modelling Population Distribution: A Visual and Quantitative Analysis of Gradient Boosting and Deep Learning Models for Multi-Output Spatial Disaggregation</i>, Transactions in GIS, vol. 28, no. 2, 2024 [<a href="https://doi.org/10.1111/tgis.13130">PDF</a>] </li>				
+<li>Manuel Goulão, Lourenço Bandeira, Bruno Martins, Arlindo L. Oliveira, <i>Training environmental sound classification models for real-world deployment in edge devices</i>, Discover Applied Sciences, Volume 6, 2024 [<a href="">PDF</a>] </li>
+<li>Fabio Goularte, Bruno Martins, Paula Carvalho, Miguel Won, <i>SentPT: A customized solution for multi-genre sentiment analysis of Portuguese-language texts</i>, Expert Systems with Applications, 2024 [<a href="">PDF</a>] </li>
+<li>Marina Georgati, João Monteiro, Bruno Martins, Henning Sten Hansen, and Carsten Keßler, <i>Modelling Population Distribution: A Visual and Quantitative Analysis of Gradient Boosting and Deep Learning Models for Multi-Output Spatial Disaggregation</i>, Transactions in GIS, vol. 28, no. 2, 2024 [<a href="https://doi.org/10.1111/tgis.13130">PDF</a>] </li>
 <li>João Daniel Silva, Bruno Martins, João Magalhães, <i>Contrastive Training of a Multimodal Encoder for Medical Visual Question Answering</i>, Intelligent Systems with Applications, 2023 [<a href="https://doi.org/10.1016/j.iswa.2023.200221">PDF</a>]</li>
 <li>Henrique Lopes Cardoso, Rui Sousa-Silva, Paula Carvalho, and Bruno Martins, <i>Argumentation models and their use in corpus annotation: Practice, prospects, and challenges</i>, Natural Language Engineering, 2023 [<a href="https://doi.org/10.1017/S1351324923000062">PDF</a>]</li>
 <li>Isabel Coutinho, and Bruno Martins, <i>Transformer-based Models for ICD-10 Coding of Death Certificates with Portuguese Text</i>, Journal of Biomedical Informatics, 2022 [<a href="https://doi.org/10.1016/j.jbi.2022.104232">PDF</a>]</li>
