--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Rita Ramos, Emanuele Bugliarello, Bruno Martins, and Desmond Elliott, <i>PAELLA: Parameter-Efficient Lightweight Language-Agnostic Captioning Model</i>, Findings of the Annual Conference of the North American Chapter of the Association for Computational Linguistics, 2024 [<a href="">PDF</a>]</li>				
 <li>Gonçalo Gomes, Isabel Coutinho, and Bruno Martins, <i>Accurate and Well-Calibrated ICD Coding Through Attention Over Diverse Label Embeddings</i>, Proceedings of the Conference of the European Chapter of the Association for Computational Linguistics, 2024 [<a href="https://arxiv.org/abs/2402.03172">PDF</a>]</li>
 <li>Luís Borges, Jamie Callan, and Bruno Martins, <i>Team CMU-LTI at TREC 2023 Tip-of-the-Tongue Track</i>, Proceedings of the Text Retrieval Conference, 2023 [<a href="">PDF</a>]</li>
 <li>Miguel Gonçalves, Bruno Martins, and Jacinto Estima, <i>A Detailed Analysis on the Use of General-purpose Vision Transformers for Remote Sensing Image Segmentation</i>, Proceedings of the International ACM SIGSPATIAL Workshop on AI for Geographic Knowledge Discovery, 2023 [<a href="https://doi.org/10.1145/3615886.3627751">PDF</a>]</li>				
