--- a/index.html
+++ b/index.html
@@ -867,15 +867,16 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
-						<a href="https://sites.google.com/view/socialnlp2024/">SocialNLP'24</a> |						
+						<a href="https://dhnb.eu/conferences/dhnb2024/workshops/dipada/">DiPaDA'24</a> |
+						<a href="https://sites.google.com/view/socialnlp2024/">SocialNLP'24</a> |
 						<a href="http://ds2024.isti.cnr.it/index.html">DS'24</a> |
 						<a href="https://ecai2024.eu/">ECAI'24</a> |
 						<a href="https://sites.google.com/view/trac2024/home">TRAC'24</a> |
 						<a href="https://2024.aclweb.org">ACL'24</a> |
-						<a href="http://sdss2024.spatial-data-science.net">SDSS'24</a> |						
+						<a href="http://sdss2024.spatial-data-science.net">SDSS'24</a> |
 						<a href="https://agile-online.org/conference-2024">AGILE'24</a> |
 						<a href="https://sigir.org/sigir2024/">SIGIR'24</a> |
-						<a href="https://text2story24.inesctec.pt">Text2Story'24</a> |
+						<a href="https://text2story24.inesctec.pt">Text2Story'24</a> (Recognized Reviewer Award)|
 						<a href="https://2024.naacl.org">NAACL'24</a> |	
 						<a href="https://2024.eacl.org">EACL'24</a> |							
 						<a href="https://dh2024.adho.org">DH'23</a> |
