--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@ involved in several research projects related to geospatial aspects in informati
 
 			<ul>
 <!-- <li>João Coelho, Bruno Martins, Joao Magalhaes, Jamie Callan, and Chenyan Xiong, <i>Dwell in the Beginning: How Language Models Embed Long Documents for Dense Retrieval</i>, Proceedings of the Annual Meeting of the Association for Computational Linguistics, 2024 [<a href="">PDF</a>]</li> -->
+<li>Artur Guimarães, Bruno Martins, and João Magalhães, <i>Lisbon Computational Linguists at SemEval-2024 Task 2: Using A Mistral-7B Model and Data Augmentation</i>, Proceedings of the International Workshop on Semantic Evaluation, 2024 [<a href="">PDF</a>]</li>
 <li>Luís Borges, Rohan Jha, Jamie Callan, and Bruno Martins, <i>Generalizable Tip-of-the-Tongue Retrieval with LLM Re-ranking</i>, Proceedings of the International ACM SIGIR Conference on Research and Development in Information Retrieval, 2024 [<a href="">PDF</a>]</li>
 <li>Rita Ramos, Emanuele Bugliarello, Bruno Martins, and Desmond Elliott, <i>PAELLA: Parameter-Efficient Lightweight Language-Agnostic Captioning Model</i>, Findings of the Annual Conference of the North American Chapter of the Association for Computational Linguistics, 2024 [<a href="">PDF</a>]</li>
 <li>Gonçalo Gomes, Isabel Coutinho, and Bruno Martins, <i>Accurate and Well-Calibrated ICD Coding Through Attention Over Diverse Label Embeddings</i>, Proceedings of the Conference of the European Chapter of the Association for Computational Linguistics, 2024 [<a href="https://arxiv.org/abs/2402.03172">PDF</a>]</li>
