--- a/index.html
+++ b/index.html
@@ -868,6 +868,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://cikm2024.org">CIKM'24</a> |						
 						<a href="https://dhnb.eu/conferences/dhnb2024/workshops/dipada/">DiPaDA'24</a> |
 						<a href="https://sites.google.com/view/socialnlp2024/">SocialNLP'24</a> |
 						<a href="http://ds2024.isti.cnr.it/index.html">DS'24</a> |
