--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
-					<td><strong>Short Bio: </strong>Bruno Martins is an Associate Professor at Instituto Superior Técnico of the University of Lisbon, a researcher at the Human Language Technologies Lab of INESC-ID, and a member of the Lisbon ELLIS Unit (LUMLIS). He works on problems related to the general areas of information retrieval, text mining, and the geographical information sciences. Bruno has been
-involved in several research projects related to geospatial aspects in information access and retrieval, and he has accumulated a significant expertise in addressing challenges at the intersection of information retrieval and the geographical information sciences (i.e., in an area that is often referred to as geographical information retrieval).</td>
+					<td><strong>Short Bio: </strong>Bruno Martins is an Associate Professor at Instituto Superior Técnico of the University of Lisbon, a researcher at the Human Language Technologies Lab of INESC-ID, and a member of the Lisbon ELLIS Unit (LUMLIS). He works on problems related to the general areas of information retrieval, text mining, and the geographical information sciences. Bruno has specifically been involved in several research projects related to geospatial aspects in information access and retrieval, and he has accumulated a significant expertise in addressing challenges at the intersection of information retrieval, natural language processing, and machine learning.</td>
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
