--- a/index.html
+++ b/index.html
@@ -368,13 +368,14 @@
 
 			<h3>Conference and Workshop Papers</h3>
 
-			<ul>
-<!-- <li>João Coelho, Bruno Martins, Joao Magalhaes, Jamie Callan, and Chenyan Xiong, <i>Dwell in the Beginning: How Language Models Embed Long Documents for Dense Retrieval</i>, Proceedings of the Annual Meeting of the Association for Computational Linguistics, 2024 [<a href="">PDF</a>]</li> -->
+			<ul>				
+<li>João Coelho, Bruno Martins, Joao Magalhães, Jamie Callan, and Chenyan Xiong, <i>Dwell in the Beginning: How Language Models Embed Long Documents for Dense Retrieval</i>, Proceedings of the Annual Meeting of the Association for Computational Linguistics, 2024 [<a href="https://arxiv.org/abs/2404.04163">PDF</a>]</li>
 <li>Artur Guimarães, Bruno Martins, and João Magalhães, <i>Lisbon Computational Linguists at SemEval-2024 Task 2: Using A Mistral-7B Model and Data Augmentation</i>, Proceedings of the International Workshop on Semantic Evaluation, 2024 [<a href="">PDF</a>]</li>
 <li>Luís Borges, Rohan Jha, Jamie Callan, and Bruno Martins, <i>Generalizable Tip-of-the-Tongue Retrieval with LLM Re-ranking</i>, Proceedings of the International ACM SIGIR Conference on Research and Development in Information Retrieval, 2024 [<a href="">PDF</a>]</li>
 <li>Rita Ramos, Emanuele Bugliarello, Bruno Martins, and Desmond Elliott, <i>PAELLA: Parameter-Efficient Lightweight Language-Agnostic Captioning Model</i>, Findings of the Annual Conference of the North American Chapter of the Association for Computational Linguistics, 2024 [<a href="">PDF</a>]</li>
 <li>Gonçalo Gomes, Isabel Coutinho, and Bruno Martins, <i>Accurate and Well-Calibrated ICD Coding Through Attention Over Diverse Label Embeddings</i>, Proceedings of the Conference of the European Chapter of the Association for Computational Linguistics, 2024 [<a href="https://arxiv.org/abs/2402.03172">PDF</a>]</li>
 <li>Luís Borges, Jamie Callan, and Bruno Martins, <i>Team CMU-LTI at TREC 2023 Tip-of-the-Tongue Track</i>, Proceedings of the Text Retrieval Conference, 2023 [<a href="">PDF</a>]</li>
+<li>João Pedro Novo, Manuel Goulão, Lourenço Bandeira, Bruno Martins, and Arlindo L. Oliveira, <i>Augmentation-Based Approaches for Overcoming Low Visibility in Street Object Detection</i>, Proceedings of the International Conference on Machine Learning and Applications, [<a href="https://ieeexplore.ieee.org/document/10460034">PDF</a>]</li>
 <li>Miguel Gonçalves, Bruno Martins, and Jacinto Estima, <i>A Detailed Analysis on the Use of General-purpose Vision Transformers for Remote Sensing Image Segmentation</i>, Proceedings of the International ACM SIGSPATIAL Workshop on AI for Geographic Knowledge Discovery, 2023 [<a href="https://doi.org/10.1145/3615886.3627751">PDF</a>]</li>				
 <li>Helder Dias, Artur Guimarães, Bruno Martins, and Mathieu Roche, <i>Unsupervised Key-Phrase Extraction from Long Texts with Multilingual Sentence Transformers</i>, Proceedings of the International Conference on Discovery Science, 2023 [<a href="https://doi.org/10.1007/978-3-031-45275-8_10">PDF</a>]</li>
 <li>Isabel Coutinho, and Bruno Martins, <i>Exploring Label Correlations for Quantification of ICD Codes</i>, Proceedings of the International Conference on Discovery Science, 2023 [<a href="https://doi.org/10.1007/978-3-031-45275-8_41">PDF</a>]</li>
